[BUG] PostMan Mock API 요청 초과로 heroku로 배포 변경

--- a/BE/src/main/resources/static/index.html
+++ b/BE/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
   <link href="../style/dustCondition.css" rel="stylesheet" type="text/css"/>
   <link href="../style/dustForecast.css" rel="stylesheet" type="text/css"/>
   <script src="../javascript/main.js" type="module"></script>
-  <link href="style.css" rel="stylesheet">
+  <link href="../style.css" rel="stylesheet">
 </head>
 <body>
 <div class="wrap">
@@ -30,6 +30,6 @@
     </div>
   </div>
 </div>
-<script src="main_bundle.js"></script>
+<script src="../main_bundle.js"></script>
 </body>
 </html>
