[FEAT] 200402 일일 배포

--- a/BE/src/main/resources/static/index.html
+++ b/BE/src/main/resources/static/index.html
@@ -4,13 +4,7 @@
   <meta charset="UTF-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>Document</title>
-  <link href="../style/common/lib/reset.css" rel="stylesheet" type="text/css"/>
-  <link href="../style/common/style.css" rel="stylesheet" type="text/css"/>
-  <link href="../style/navigation.css" rel="stylesheet" type="text/css"/>
-  <link href="../style/dustCondition.css" rel="stylesheet" type="text/css"/>
-  <link href="../style/dustForecast.css" rel="stylesheet" type="text/css"/>
-  <script src="../javascript/main.js" type="module"></script>
-  <link href="../style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
 <div class="wrap">
@@ -30,6 +24,6 @@
     </div>
   </div>
 </div>
-<script src="../main_bundle.js"></script>
+<script src="main_bundle.js"></script>
 </body>
 </html>
