--- a/BE/src/main/resources/static/index.html
+++ b/BE/src/main/resources/static/index.html
@@ -10,18 +10,11 @@
 <div class="wrap">
   <div class="navigation">
     <div class="buttonArea">
-      <button id="dustConditionBtn">미세먼지 예보</button>
+      <button id="dustConditionBtn">미세먼지</button>
       <button id="dustForecastBtn">예보</button>
     </div>
   </div>
   <div class="content">
-    <!-- <div class="dustCondition">
-    </div> -->
-    <div class="dustForecast">
-      <div class="test">
-
-      </div>
-    </div>
   </div>
 </div>
 <script src="main_bundle.js"></script>
